--- a/police-shooting.html
+++ b/police-shooting.html
@@ -15,7 +15,7 @@
   </div>
 
   <div id="Map" class="tabcontent">
-    <h3 style="text-align: center;">Hover for more details | Click case to zoom</h3>
+    <h3 style="text-align: center;">Click case to zoom | Hover for more details</h3>
     <div class="switch-container" style="justify-content: center;">
       <span class="left-text">Latest 500 shootings</span>
       <label class="switch" id="mySwitch">
